welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: ';' expected but '(' found.
	var TCouleur: newArray[Couleur](hauteur);
                                       ^